syntax = "proto3";
package dipstick.shadow.v1;

import "dipstick/core/v1/entity.proto";
import "dipstick/shadow/v1/shadow.proto";

service ShadowService {
  rpc CreateShadow(CreateShadowRequest) returns (CreateShadowResponse);
  rpc GetShadow(GetShadowRequest) returns (GetShadowResponse);

  rpc ShadowSignalEvents(ShadowSignalEventsRequest) returns (stream ShadowSignalEventsResponse);
}

message CreateShadowRequest {
  dipstick.core.v1.EntityMetaSpec meta = 1;
  ShadowSpec spec = 2;
}

message CreateShadowResponse {
  ShadowEntity shadow = 1;
}

message GetShadowRequest {
  dipstick.core.v1.EntitySelector selector = 1;
}

message GetShadowResponse {
  ShadowEntity shadow = 1;
}

message ShadowSignalEventsRequest {
  dipstick.core.v1.EntitySelector selector = 1;
}

message ShadowSignalEventsResponse {}
