syntax = "proto3";
package dipstick.shadow.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message SignalChange {
  uint64 signal_id = 1;
  SignalValue current = 2;
  SignalValue previous = 3;
}

message SignalValue {
  google.protobuf.Timestamp timestamp = 2;
  google.protobuf.Value value = 3;
}

message SignalInfo {
  uint64 signal_id = 1;
  google.protobuf.Timestamp created_at = 2;
  SignalValue value = 3;
}
